[package]
name = "moldy_roll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.8.0"
thiserror = "1.0"
eyre = "0.6"
wasm-encoder = "0.14"
wasmtime = { version = "0.39", features = ["wat"] }
wasmprinter = "0.2.0"
petgraph = "0.6"
